--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "version": "3.6.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "random-js": "^2.1.0",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "require": "^2.4.20",
     "webpack": "^5.75.0"
   },
